--- a/src/HN.Bangumi.API.Uwp.BackgroundTasks/HN.Bangumi.API.Uwp.BackgroundTasks.csproj
+++ b/src/HN.Bangumi.API.Uwp.BackgroundTasks/HN.Bangumi.API.Uwp.BackgroundTasks.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5C82A15C-A505-42D2-A31E-7A5B537AFFB9}</ProjectGuid>
-    <OutputType>winmdobj</OutputType>
+    <ProjectGuid>{D5DA721A-C0EF-4338-BD0C-C035006501AE}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HN.Bangumi.Uwp.BackgroundTasks</RootNamespace>
-    <AssemblyName>HN.Bangumi.Uwp.BackgroundTasks</AssemblyName>
+    <RootNamespace>HN.Bangumi.API</RootNamespace>
+    <AssemblyName>HN.Bangumi.API.Uwp.BackgroundTasks</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.16299.0</TargetPlatformVersion>
@@ -16,7 +16,6 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <AllowCrossPlatformRetargeting>false</AllowCrossPlatformRetargeting>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -122,21 +121,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RefreshTokenTask.cs" />
+    <Compile Include="RefreshTokenTaskBase.cs" />
+    <EmbeddedResource Include="Properties\HN.Bangumi.API.Uwp.BackgroundTasks.rd.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options">
+      <Version>2.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HN.Bangumi.API.Core\HN.Bangumi.API.Core.csproj">
-      <Project>{4edf132f-64be-48f2-889e-0d5133a5e3ad}</Project>
+      <Project>{4EDF132F-64BE-48F2-889E-0D5133A5E3AD}</Project>
       <Name>HN.Bangumi.API.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HN.Bangumi.API.Uwp.BackgroundTasks\HN.Bangumi.API.Uwp.BackgroundTasks.csproj">
-      <Project>{d5da721a-c0ef-4338-bd0c-c035006501ae}</Project>
-      <Name>HN.Bangumi.API.Uwp.BackgroundTasks</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
