--- a/src/HN.Bangumi.API.Desktop/HN.Bangumi.API.Desktop.csproj
+++ b/src/HN.Bangumi.API.Desktop/HN.Bangumi.API.Desktop.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Authorization\DesktopAuthorizationProvider.cs" />
     <Compile Include="BangumiClientBuilderDesktopExtensions.cs" />
+    <Compile Include="DesktopAccessTokenStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -76,6 +77,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options">
       <Version>2.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugins.Settings">
+      <Version>3.1.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
