--- a/src/HN.Bangumi.ViewModels/HN.Bangumi.ViewModels.csproj
+++ b/src/HN.Bangumi.ViewModels/HN.Bangumi.ViewModels.csproj
@@ -9,7 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HN.Bangumi.API.Core\HN.Bangumi.API.Core.csproj" />
     <ProjectReference Include="..\HN.Bangumi.Configuration.Abstractions\HN.Bangumi.Configuration.Abstractions.csproj" />
+    <ProjectReference Include="..\HN.Bangumi.Services.Abstractions\HN.Bangumi.Services.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
