--- a/src/HN.Bangumi.Uwp.17763/HN.Bangumi.Uwp.17763.csproj
+++ b/src/HN.Bangumi.Uwp.17763/HN.Bangumi.Uwp.17763.csproj
@@ -119,13 +119,32 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\SubjectItem.xaml.cs">
+      <DependentUpon>SubjectItem.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Converters\IsNullToVisibilityConverter.cs" />
+    <Compile Include="Converters\ItemClickEventArgsConverter.cs" />
+    <Compile Include="Converters\SubjectNameConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AppDialogService.cs" />
     <Compile Include="ViewModels\ViewModelLocator.cs" />
+    <Compile Include="Views\CalendarView.xaml.cs">
+      <DependentUpon>CalendarView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ProgressView.xaml.cs">
+      <DependentUpon>ProgressView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SearchView.xaml.cs">
+      <DependentUpon>SearchView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\SettingView.xaml.cs">
       <DependentUpon>SettingView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SubjectView.xaml.cs">
+      <DependentUpon>SubjectView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +152,7 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="HN.Bangumi.Uwp.17763_TemporaryKey.pfx" />
+    <PRIResource Include="Strings\zh-CN\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
@@ -149,11 +169,35 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Controls\SubjectItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\AppNavigationViewStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CalendarView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ProgressView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SearchView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\SettingView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ShellView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SubjectView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -165,11 +209,25 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
+      <Version>2.0.0</Version>
+    </PackageReference>
     <PackageReference Include="MvvmLightLibsStd10">
       <Version>5.4.1.1</Version>
     </PackageReference>
+    <PackageReference Include="WinRTXamlToolkit.UWP">
+      <Version>2.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HN.Bangumi.API.Core\HN.Bangumi.API.Core.csproj">
+      <Project>{4edf132f-64be-48f2-889e-0d5133a5e3ad}</Project>
+      <Name>HN.Bangumi.API.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HN.Bangumi.API.Uwp\HN.Bangumi.API.Uwp.csproj">
+      <Project>{6cd071e7-fe8e-47c3-ba4f-e5f5008f318e}</Project>
+      <Name>HN.Bangumi.API.Uwp</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HN.Bangumi.Configuration.Abstractions\HN.Bangumi.Configuration.Abstractions.csproj">
       <Project>{c091a433-3f6a-4dce-a81c-803f779d334f}</Project>
       <Name>HN.Bangumi.Configuration.Abstractions</Name>
@@ -178,11 +236,20 @@
       <Project>{2dddefe3-e65c-48e3-b8f5-591bf5ef74cb}</Project>
       <Name>HN.Bangumi.Configuration</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HN.Bangumi.Services.Abstractions\HN.Bangumi.Services.Abstractions.csproj">
+      <Project>{42297821-8B96-4893-A4E7-55071CBF25ED}</Project>
+      <Name>HN.Bangumi.Services.Abstractions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HN.Bangumi.Services\HN.Bangumi.Services.csproj">
+      <Project>{14F863B0-8EAC-4CB6-8A69-B861B5D1B7AA}</Project>
+      <Name>HN.Bangumi.Services</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HN.Bangumi.ViewModels\HN.Bangumi.ViewModels.csproj">
       <Project>{4c887dfc-bb80-4da4-b919-0c04df87907e}</Project>
       <Name>HN.Bangumi.ViewModels</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
