--- a/src/HN.Bangumi.API.Core/HN.Bangumi.API.Core.csproj
+++ b/src/HN.Bangumi.API.Core/HN.Bangumi.API.Core.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Polly" Version="7.0.3" />
+    <PackageReference Include="Polly.Extensions.Http" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
