--- a/src/HN.Bangumi.Uwp.17763/HN.Bangumi.Uwp.17763.csproj
+++ b/src/HN.Bangumi.Uwp.17763/HN.Bangumi.Uwp.17763.csproj
@@ -346,6 +346,9 @@
     <PackageReference Include="FontAwesome5">
       <Version>1.0.10</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>1.13.2</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
     </PackageReference>
