--- a/src/HN.Bangumi.Uwp.17763/HN.Bangumi.Uwp.17763.csproj
+++ b/src/HN.Bangumi.Uwp.17763/HN.Bangumi.Uwp.17763.csproj
@@ -383,6 +383,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>5.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
       <Version>2.0.0</Version>
     </PackageReference>
