--- a/src/HN.Bangumi.ViewModels/HN.Bangumi.ViewModels.csproj
+++ b/src/HN.Bangumi.ViewModels/HN.Bangumi.ViewModels.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HN.Controls.ImageEx.Core" Version="1.0.6" />
     <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
-    <PackageReference Include="Polly" Version="7.0.3" />
+    <PackageReference Include="Polly" Version="7.1.0" />
   </ItemGroup>
 
   <ItemGroup>
