--- a/src/HN.Bangumi.Configuration.Abstractions/HN.Bangumi.Configuration.Abstractions.csproj
+++ b/src/HN.Bangumi.Configuration.Abstractions/HN.Bangumi.Configuration.Abstractions.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>HN.Bangumi.Configuration</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HN.Bangumi.API.Core\HN.Bangumi.API.Core.csproj" />
+  </ItemGroup>
+
 </Project>
