--- a/src/HN.Bangumi.Uwp.17763/HN.Bangumi.Uwp.17763.csproj
+++ b/src/HN.Bangumi.Uwp.17763/HN.Bangumi.Uwp.17763.csproj
@@ -17,7 +17,14 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>HN.Bangumi.Uwp.17763_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>HN.Bangumi.Uwp.17763_StoreKey.pfx</PackageCertificateKeyFile>
+    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x86|x64</AppxBundlePlatforms>
+    <PackageCertificateThumbprint>579637BBC9271685B23437998777F66FD04429B8</PackageCertificateThumbprint>
+    <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
+    <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -119,6 +126,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Configuration\AppCache.cs" />
     <Compile Include="Controls\AppLoadingControl.cs" />
     <Compile Include="Controls\BindableMargin.xaml.cs">
       <DependentUpon>BindableMargin.xaml</DependentUpon>
@@ -126,12 +134,9 @@
     <Compile Include="Controls\BlogItem.xaml.cs">
       <DependentUpon>BlogItem.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\CharacterItem.xaml.cs">
-      <DependentUpon>CharacterItem.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\EpItem.xaml.cs">
-      <DependentUpon>EpItem.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="Controls\CharacterItem2.cs" />
+    <Compile Include="Controls\EpItem2.cs" />
+    <Compile Include="Controls\EpProgressControl.cs" />
     <Compile Include="Controls\StaffItem.xaml.cs">
       <DependentUpon>StaffItem.xaml</DependentUpon>
     </Compile>
@@ -146,15 +151,21 @@
       <DependentUpon>TopicItem.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\CharacterNameConverter.cs" />
+    <Compile Include="Converters\FileSizeToStringConverter.cs" />
+    <Compile Include="Converters\IsEmptyCollectionToVisibilityConverter.cs" />
+    <Compile Include="Converters\IsEqualsToVisibilityConverter.cs" />
+    <Compile Include="Converters\IsNullOrEmptyStringConverter.cs" />
     <Compile Include="Converters\IsNullToVisibilityConverter.cs" />
     <Compile Include="Converters\ItemClickEventArgsConverter.cs" />
     <Compile Include="Converters\MultiplyConverter.cs" />
     <Compile Include="Converters\StaffNameConverter.cs" />
     <Compile Include="Converters\SubjectNameConverter.cs" />
+    <Compile Include="Extensions\ConnectedAnimationExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AppDialogService.cs" />
     <Compile Include="Services\AppNavigationService.cs" />
     <Compile Include="Services\AppToastService.cs" />
+    <Compile Include="Services\BangumiHttpHandler.cs" />
     <Compile Include="ViewModels\ViewModelLocator.cs" />
     <Compile Include="Views\CalendarView.xaml.cs">
       <DependentUpon>CalendarView.xaml</DependentUpon>
@@ -179,10 +190,14 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <None Include="HN.Bangumi.Uwp.17763_StoreKey.pfx" />
     <None Include="HN.Bangumi.Uwp.17763_TemporaryKey.pfx" />
     <PRIResource Include="Strings\zh-CN\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Images\failed.png" />
+    <Content Include="Assets\Images\avatar.jpg" />
+    <Content Include="Assets\Images\no_image_available.jpg" />
     <Content Include="Assets\Images\smiles\01.gif" />
     <Content Include="Assets\Images\smiles\02.gif" />
     <Content Include="Assets\Images\smiles\03.gif" />
@@ -283,13 +298,53 @@
     <Content Include="Assets\Images\smiles\97.gif" />
     <Content Include="Assets\Images\smiles\98.gif" />
     <Content Include="Assets\Images\smiles\99.gif" />
+    <Content Include="Assets\LargeTile.scale-100.png" />
+    <Content Include="Assets\LargeTile.scale-125.png" />
+    <Content Include="Assets\LargeTile.scale-150.png" />
+    <Content Include="Assets\LargeTile.scale-200.png" />
+    <Content Include="Assets\LargeTile.scale-400.png" />
+    <Content Include="Assets\SmallTile.scale-100.png" />
+    <Content Include="Assets\SmallTile.scale-125.png" />
+    <Content Include="Assets\SmallTile.scale-150.png" />
+    <Content Include="Assets\SmallTile.scale-200.png" />
+    <Content Include="Assets\SmallTile.scale-400.png" />
+    <Content Include="Assets\SplashScreen.scale-100.png" />
+    <Content Include="Assets\SplashScreen.scale-125.png" />
+    <Content Include="Assets\SplashScreen.scale-150.png" />
+    <Content Include="Assets\SplashScreen.scale-400.png" />
+    <Content Include="Assets\Square150x150Logo.scale-100.png" />
+    <Content Include="Assets\Square150x150Logo.scale-125.png" />
+    <Content Include="Assets\Square150x150Logo.scale-150.png" />
+    <Content Include="Assets\Square150x150Logo.scale-400.png" />
+    <Content Include="Assets\Square44x44Logo.altform-unplated_targetsize-16.png" />
+    <Content Include="Assets\Square44x44Logo.altform-unplated_targetsize-256.png" />
+    <Content Include="Assets\Square44x44Logo.altform-unplated_targetsize-32.png" />
+    <Content Include="Assets\Square44x44Logo.altform-unplated_targetsize-48.png" />
+    <Content Include="Assets\Square44x44Logo.scale-100.png" />
+    <Content Include="Assets\Square44x44Logo.scale-125.png" />
+    <Content Include="Assets\Square44x44Logo.scale-150.png" />
+    <Content Include="Assets\Square44x44Logo.scale-400.png" />
+    <Content Include="Assets\Square44x44Logo.targetsize-16.png" />
+    <Content Include="Assets\Square44x44Logo.targetsize-24.png" />
+    <Content Include="Assets\Square44x44Logo.targetsize-256.png" />
+    <Content Include="Assets\Square44x44Logo.targetsize-32.png" />
+    <Content Include="Assets\Square44x44Logo.targetsize-48.png" />
+    <Content Include="Assets\StoreLogo.scale-100.png" />
+    <Content Include="Assets\StoreLogo.scale-125.png" />
+    <Content Include="Assets\StoreLogo.scale-150.png" />
+    <Content Include="Assets\StoreLogo.scale-200.png" />
+    <Content Include="Assets\StoreLogo.scale-400.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-100.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-125.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-150.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <None Include="Package.StoreAssociation.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
@@ -309,11 +364,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\CharacterItem.xaml">
+    <Page Include="Controls\CharacterItem2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\EpItem.xaml">
+    <Page Include="Controls\EpItem2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\EpProgressControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -337,7 +396,35 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Styles\AppButtonStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\AppImageStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\AppItemsViewStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\AppNavigationViewStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Buttons\EpItemButtonStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Buttons\EpItemCancelButtonStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Images\DefaultImageExStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\ItemsViews\DefaultGridViewStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -375,19 +462,22 @@
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="FontAwesome5">
-      <Version>1.0.10</Version>
+      <Version>1.0.11</Version>
+    </PackageReference>
+    <PackageReference Include="HN.Controls.ImageEx.Uwp">
+      <Version>1.0.8</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
-      <Version>1.13.2</Version>
+      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.1.9</Version>
+      <Version>6.2.8</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>5.1.0</Version>
+      <Version>5.1.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
-      <Version>2.0.0</Version>
+      <Version>2.0.1</Version>
     </PackageReference>
     <PackageReference Include="MvvmLightLibsStd10">
       <Version>5.4.1.1</Version>
@@ -420,6 +510,10 @@
     <ProjectReference Include="..\HN.Bangumi.Services\HN.Bangumi.Services.csproj">
       <Project>{14F863B0-8EAC-4CB6-8A69-B861B5D1B7AA}</Project>
       <Name>HN.Bangumi.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HN.Bangumi.Uwp.BackgroundTasks\HN.Bangumi.Uwp.BackgroundTasks.csproj">
+      <Project>{5c82a15c-a505-42d2-a31e-7a5b537affb9}</Project>
+      <Name>HN.Bangumi.Uwp.BackgroundTasks</Name>
     </ProjectReference>
     <ProjectReference Include="..\HN.Bangumi.ViewModels\HN.Bangumi.ViewModels.csproj">
       <Project>{4c887dfc-bb80-4da4-b919-0c04df87907e}</Project>
